[gd_scene load_steps=2 format=3 uid="uid://fc024vld8fme"]

[ext_resource type="Script" path="res://GameFiles/Scenes/UI/defeat_screen.gd" id="1_rlw8u"]

[node name="Defeat Screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rlw8u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 160.0
offset_top = 90.0
offset_right = 480.0
offset_bottom = 270.0
pivot_offset = Vector2(160, 90)
color = Color(0.290196, 0.290196, 0.290196, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DeathLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "YOU LOSE"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScoreLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score:"

[node name="ScoreValueLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="ContinueButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Continue"

[node name="QuitButton" type="Button" parent="ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
